--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.ShoppingListView">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
