--- a/app/src/main/res/layout/items_list.xml
+++ b/app/src/main/res/layout/items_list.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginRight="8dp"
     android:orientation="horizontal">
 
     <TextView
@@ -13,13 +14,12 @@
         android:layout_weight="1"
         android:textSize="30sp" />
 
-    <TextView
+    <CheckBox
         android:id="@+id/isDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="end"
-        android:textSize="18sp" />
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:minWidth="0dp"
+        android:minHeight="0dp" />
 </LinearLayout>
