--- a/app/src/main/res/layout/items_list.xml
+++ b/app/src/main/res/layout/items_list.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="8dp"
+    android:layout_marginEnd="8dp"
     android:orientation="horizontal">
 
     <TextView
@@ -15,7 +15,7 @@
         android:textSize="30sp" />
 
     <CheckBox
-        android:id="@+id/isDone"
+        android:id="@+id/isChecked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
